fix: исправляет пути к стилям и скриптам

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       type="image/png"
       href="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design"
     />
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- Script -->
-    <script src="javascripts/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
